salesforce-metadata/objects/Comp_Statement__c/Comp_Statement__c.object-meta.xml
<CustomObject>
    <label>Comp Statement</label>
    <pluralLabel>Comp Statements</pluralLabel>
    <nameField>
        <label>Statement Number</label>
        <type>AutoNumber</type>
        <displayFormat>STMT-{0000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>