salesforce-metadata/objects/Comp_Statement__c/fields/Achieved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Amount__c</fullName>
    <label>Achieved Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Bookings or metric value achieved</description>
</CustomField>