salesforce-metadata/objects/Comp_Statement__c/fields/Achieved_Count__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Count__c</fullName>
    <label>Achieved Count</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <description>For SDR: opportunity count</description>
</CustomField>