salesforce-metadata/objects/Comp_Statement__c/fields/Adjustments_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adjustments_Amount__c</fullName>
    <label>Adjustments Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <description>Sum of adjustments (positive or negative)</description>
</CustomField>