salesforce-metadata/objects/Comp_Statement__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>