salesforce-metadata/objects/Comp_Statement__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved Statements</relationshipLabel>
    <relationshipName>Approved_Statements</relationshipName>
</CustomField>