salesforce-metadata/objects/Comp_Statement__c/fields/Comp_Plan__c.field-meta.xml
<CustomField>
    <fullName>Comp_Plan__c</fullName>
    <label>Comp Plan</label>
    <type>Lookup</type>
    <referenceTo>Comp_Plan__c</referenceTo>
    <relationshipLabel>Comp Statements</relationshipLabel>
    <relationshipName>Comp_Statements</relationshipName>
</CustomField>