salesforce-metadata/objects/Comp_Statement__c/fields/Fiscal_Period__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Period__c</fullName>
    <label>Fiscal Period</label>
    <type>Text</type>
    <length>20</length>
    <required>true</required>
    <description>e.g., FY26-Q4 or FY26-M11</description>
</CustomField>