salesforce-metadata/objects/Comp_Statement__c/fields/Net_Commission__c.field-meta.xml
<CustomField>
    <fullName>Net_Commission__c</fullName>
    <label>Net Commission</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Final payable amount after adjustments</description>
</CustomField>