salesforce-metadata/objects/Comp_Statement__c/fields/Period_End__c.field-meta.xml
<CustomField>
    <fullName>Period_End__c</fullName>
    <label>Period End</label>
    <type>Date</type>
    <required>true</required>
</CustomField>