salesforce-metadata/objects/Comp_Statement__c/fields/Period_Type__c.field-meta.xml
<CustomField>
    <fullName>Period_Type__c</fullName>
    <label>Period Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>