salesforce-metadata/objects/Comp_Statement__c/fields/Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quota_Amount__c</fullName>
    <label>Quota Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Pro-rated quota for the period</description>
</CustomField>