salesforce-metadata/objects/Comp_Statement__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Comp Statements</relationshipLabel>
    <relationshipName>Comp_Statements</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>